--- a/prism-management-console-web/src/components/credentialTemplates/Organisms/Tables/_style.scss
+++ b/prism-management-console-web/src/components/credentialTemplates/Organisms/Tables/_style.scss
@@ -12,9 +12,8 @@
       display: flex;
       justify-content: space-between;
       align-items: baseline;
-      margin-left: 0.5em;
       .TableOptionButton {
-        margin: 0.5em;
+        margin: .5em .5em .5em 0;
         padding: 0;
         color: $black;
         display: flex;
