--- a/prism-management-console-web/src/components/credentials/Molecules/BulkActionsHeader/_style.scss
+++ b/prism-management-console-web/src/components/credentials/Molecules/BulkActionsHeader/_style.scss
@@ -9,7 +9,7 @@
     justify-content: space-between;
     align-items: baseline;
     .TableOptionButton {
-      margin: 0.5em 0.5em 0 0.5em;
+      margin: .5em .5em .5em 0;
       padding: 0;
       color: $black;
       display: flex;
